syntax = "proto3";
package main;

message PeerList {
  repeated PeerItem Peers=1;
}

 message PeerItem {
    bytes PeerID = 1;
    bytes Listeners = 2;
    uint64 Timestamp = 3;  
  }
